--- a/index.html
+++ b/index.html
@@ -478,51 +478,31 @@
       </p>
     </section>
 
-    <!-- 7. FAQ optimisée -->
-    <section class="section" id="faq">
-      <h2 class="section-title">Questions fréquentes</h2>
-      <div class="faq-grid">
-        <div class="faq-item">
-          <h3>Qu'est-ce que la Théorie ZM en une phrase</h3>
-          <p>Un cadre où l'information est première. L'espace-temps, les lois et la conscience émergent d'un réseau de pixels d'information multi-échelle.</p>
-        </div>
-        <div class="faq-item">
-          <h3>Est-ce testable</h3>
-          <p>Oui. La théorie propose des signatures fractales, des seuils d'intégration φ pour la conscience, et des expériences d'interférométrie très sensibles.</p>
-        </div>
-        <div class="faq-item">
-          <h3>En quoi est-ce différent des approches classiques</h3>
-          <p>Nous ne postulons pas la géométrie ni les lois. Elles émergent comme attracteurs stables du réseau informationnel.</p>
-        </div>
-        <div class="faq-item">
-          <h3>La conscience est-elle liée au support</h3>
-          <p>Non. Seule compte l'intégration d'information au-delà d'un seuil φc, quel que soit le substrat.</p>
-        </div>
-      </div>
-    </section>
+  <!-- Appel final -->
+<section class="section" style="text-align:center;">
+  <h2 class="section-title" style="margin:0 0 .5rem;">Envie d'aller plus loin ?</h2>
+  <p style="margin:0 0 1rem;">
+    Pour les esprits curieux et exigeants, découvrez la Théorie détaillée et les pistes expérimentales.
+  </p>
 
-    <!-- Appel final -->
-    <section class="section" style="text-align:center;">
-      <h2 class="section-title">Envie d'aller plus loin ?</h2>
-      <p>Pour les esprits curieux et exigeants, découvrez la Théorie détaillée et les pistes expérimentales.</p>
-      <div style="margin: 1.2rem 0 0;">
-        <!-- Remplace LIVRE_COMPLET_URL.pdf par l'URL finale -->
-          <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:10px;">
-        <a href="https://www.amazon.fr/dp/B0FSF358XS" target="_blank" rel="noopener"
-           style="background:#0f766e;color:#fff;text-decoration:none;padding:12px 16px;
-                  border-radius:10px;font-weight:700;">🛒 Acheter l’eBook Kindle</a>
+  <div style="margin: 1.2rem 0 0;">
+    <div style="display:flex; justify-content:center; align-items:center; gap:10px; flex-wrap:wrap; margin-top:10px;">
+      <a href="https://www.amazon.fr/dp/B0FSF358XS" target="_blank" rel="noopener"
+         style="background:#0f766e;color:#fff;text-decoration:none;padding:12px 16px;border-radius:10px;font-weight:700;">
+        🛒 Acheter l’eBook Kindle
+      </a>
 
-        <!-- remplace l'ASIN_BROCHE une fois le broché en ligne -->
-        <a href="https://www.amazon.fr/dp/ASIN_BROCHE" target="_blank" rel="noopener"
-           style="background:#1d4ed8;color:#fff;text-decoration:none;padding:12px 16px;
-                  border-radius:10px;font-weight:700;">📘 Acheter le livre broché</a>
-      </div>
-
-      <p style="margin-top:12px;color:#6b7280;font-size:14px;">© 2025 Alexandre ZM — Independently published</p>
+      <a href="https://www.amazon.fr/dp/ASIN_BROCHE" target="_blank" rel="noopener"
+         style="background:#1d4ed8;color:#fff;text-decoration:none;padding:12px 16px;border-radius:10px;font-weight:700;">
+        📘 Acheter le livre broché
+      </a>
     </div>
-      <p style="font-style:italic; color:#B0C4DE; margin:1.2rem 0 0;"
-      </p>
-    </section>
+
+    <p style="margin-top:12px;color:#6b7280;font-size:14px;">
+      © 2025 Alexandre ZM — Independently published
+    </p>
+  </div>
+</section>
 
     <!-- Contact -->
     <div class="contact">
