--- a/index.html
+++ b/index.html
@@ -482,8 +482,20 @@
 <section class="section" style="text-align:center;">
   <h2 class="section-title" style="margin:0 0 .5rem;">Envie d'aller plus loin ?</h2>
   <p style="margin:0 0 1rem;">
-    Pour les esprits curieux et exigeants, découvrez la Théorie détaillée et les pistes expérimentales.
+    Découvrez la Théorie détaillée et les pistes expérimentales dans le livre.
   </p>
+ 
+  <p>Ce livre n’est pas un credo, mais une <b>hypothèse falsifiable</b>. Vous y trouverez des
+<b>signatures vérifiables</b> (intrication, motifs d’interférence, plateaux d’échelle),
+une <i>distance d’information</i> pour mesurer la proximité descriptive et une
+<i>action</i> pour la cohérence des traductions. Rigueur sans brouillard, clarté sans
+simplisme.</p>
+
+<p>Ce livre est destiné aux Étudiants, aux chercheurs, comme à tous lecteurs exigeants, curieux de physique fondamentale,
+de cosmologie et de sciences de l’information. Si vous aimez Hawking, Rovelli ou Klein, et si vous
+préférez une <b>boussole</b> à un catéchisme, ce livre est pour vous.</p>
+
+<p><b>Ouvrez-le</b>&nbsp;: voyez la charpente informationnelle du réel se dessiner sous vos yeux.</p>
 
   <div style="margin: 1.2rem 0 0;">
     <div style="display:flex; justify-content:center; align-items:center; gap:10px; flex-wrap:wrap; margin-top:10px;">
