--- a/index.html
+++ b/index.html
@@ -485,13 +485,15 @@
     Découvrez la Théorie détaillée et les pistes expérimentales dans le livre.
   </p>
  
-  <p>Ni credo ni métaphore : une hypothèse testable, avec des signatures vérifiables (intrication, motifs d’interférence, plateaux d’échelle). Rigueur sans brouillard, clarté sans simplisme. Pour lectrices et lecteurs exigeants qui préfèrent une boussole à un catéchisme.</p>
+  <p>Ni credo ni métaphore : une hypothèse testable, avec des signatures vérifiables (intrication, motifs d’interférence, plateaux d’échelle). </p>
+   </p>Rigueur sans brouillard, clarté sans simplisme.</p>
 
-<p>Ce livre est destiné aux Étudiants, aux chercheurs, comme à tous lecteurs exigeants, curieux de physique fondamentale,
-de cosmologie et de sciences de l’information. Si vous aimez Hawking, Rovelli ou Klein, et si vous
+<p>Destiné aux Étudiants, aux chercheurs, comme à tous lecteurs exigeants, curieux de physique fondamentale,
+de cosmologie et de sciences de l’information. </p>
+   </p>Si vous aimez Hawking, Rovelli ou Klein, et si vous
 préférez une <b>boussole</b> à un catéchisme, ce livre est pour vous.</p>
 
-<p><b>Ouvrez-le, et voyez la charpente informationnelle du réel se dessiner sous vos yeux.</b>&nbsp;</p>
+<p><b>Ouvrez-le, admirez la charpente informationnelle du réel se dessiner sous vos yeux.</b>&nbsp;</p>
 
   <div style="margin: 1.2rem 0 0;">
     <div style="display:flex; justify-content:center; align-items:center; gap:10px; flex-wrap:wrap; margin-top:10px;">
