--- a/index.html
+++ b/index.html
@@ -485,26 +485,25 @@
     Découvrez la Théorie détaillée et les pistes expérimentales dans le livre.
   </p>
  
-  <p>Ni credo ni métaphore : une hypothèse testable, avec des signatures vérifiables (intrication, motifs d’interférence, plateaux d’échelle). </p>
-   </p>Rigueur sans brouillard, clarté sans simplisme.</p>
+  <p>Ni credo ni métaphore : une hypothèse testable, avec des signatures vérifiables (intrication, motifs d’interférence, plateaux d’échelle). Rigueur sans brouillard, clarté sans simplisme.</p>
 
-<p>Destiné aux Étudiants, aux chercheurs, comme à tous lecteurs exigeants, curieux de physique fondamentale,
+<p>Destiné aux Étudiants, aux chercheurs, mais aussi aux lecteurs exigeants, curieux de physique fondamentale,
 de cosmologie et de sciences de l’information. </p>
    </p>Si vous aimez Hawking, Rovelli ou Klein, et si vous
 préférez une <b>boussole</b> à un catéchisme, ce livre est pour vous.</p>
 
-<p><b>Ouvrez-le, admirez la charpente informationnelle du réel se dessiner sous vos yeux.</b>&nbsp;</p>
+<p><b>Ouvrez-le, admirez la charpente informationnelle du réel se dessiner sous vos yeux...</b>&nbsp;</p>
 
   <div style="margin: 1.2rem 0 0;">
     <div style="display:flex; justify-content:center; align-items:center; gap:10px; flex-wrap:wrap; margin-top:10px;">
       <a href="https://www.amazon.fr/dp/B0FSF358XS" target="_blank" rel="noopener"
          style="background:#0f766e;color:#fff;text-decoration:none;padding:12px 16px;border-radius:10px;font-weight:700;">
-        🛒 Acheter l’eBook Kindle
+        🛒 Lire l’eBook
       </a>
 
       <a href="https://www.amazon.fr/dp/ASIN_BROCHE" target="_blank" rel="noopener"
          style="background:#1d4ed8;color:#fff;text-decoration:none;padding:12px 16px;border-radius:10px;font-weight:700;">
-        📘 Acheter le livre broché
+        📘 Commendez le livre broché
       </a>
     </div>
 
