--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ préférez une <b>boussole</b> à un catéchisme, ce livre est pour vous.</p>
 
       <a href="https://www.amazon.fr/dp/ASIN_BROCHE" target="_blank" rel="noopener"
          style="background:#1d4ed8;color:#fff;text-decoration:none;padding:12px 16px;border-radius:10px;font-weight:700;">
-        📘 Commendez le livre broché
+        📘 Commendez le livre
       </a>
     </div>
 
