--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
  
   <p>Ni credo ni métaphore : une hypothèse testable, avec des signatures vérifiables (intrication, motifs d’interférence, plateaux d’échelle). Rigueur sans brouillard, clarté sans simplisme.</p>
 
-<p>Destiné aux Étudiants, aux chercheurs, mais aussi aux lecteurs exigeants, curieux de physique fondamentale,
+<p>Destiné aux Étudiants, chercheurs, comme aux lecteurs exigeants, curieux de physique fondamentale,
 de cosmologie et de sciences de l’information. </p>
    </p>Si vous aimez Hawking, Rovelli ou Klein, et si vous
 préférez une <b>boussole</b> à un catéchisme, ce livre est pour vous.</p>
