--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
     Découvrez la Théorie détaillée et les pistes expérimentales dans le livre.
   </p>
  
-  <p>Ni credo ni métaphore : une hypothèse testable, avec des signatures vérifiables (intrication, motifs d’interférence, plateaux d’échelle). Rigueur sans brouillard, clarté sans simplisme.</p>
+  <p>Ni credo ni métaphore : une hypothèse testable, avec des signatures vérifiables. Rigueur sans brouillard, clarté sans simplisme.</p>
 
 <p>Destiné aux Étudiants, chercheurs, comme aux lecteurs exigeants, curieux de physique fondamentale,
 de cosmologie et de sciences de l’information. </p>
