--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ préférez une <b>boussole</b> à un catéchisme, ce livre est pour vous.</p>
         🛒 Lire l’eBook
       </a>
 
-      <a href="https://www.amazon.fr/dp/ASIN_BROCHE" target="_blank" rel="noopener"
+      <a href="https://www.amazon.fr/dp/B0FT86CZDK" target="_blank" rel="noopener"
          style="background:#1d4ed8;color:#fff;text-decoration:none;padding:12px 16px;border-radius:10px;font-weight:700;">
         📘 Commendez le livre
       </a>
