--- a/index.html
+++ b/index.html
@@ -482,15 +482,16 @@
 <section class="section" style="text-align:center;">
   <h2 class="section-title" style="margin:0 0 .5rem;">Envie d'aller plus loin ?</h2>
   <p style="margin:0 0 1rem;">
-    Découvrez la Théorie détaillée et les pistes expérimentales dans le livre.
+    Découvrez la Théorie détaillée et les pistes expérimentales
   </p>
  
-  <p>Ni credo ni métaphore : une hypothèse testable, avec des signatures vérifiables. Rigueur sans brouillard, clarté sans simplisme.</p>
+  <p>Ni credo ni métaphore : une hypothèse testable, avec des signatures vérifiables. 
+    Rigueur sans brouillard, clarté sans simplisme.</p>
 
-<p>Destiné aux Étudiants, chercheurs, comme aux lecteurs exigeants, curieux de physique fondamentale,
+<p>Pour les Étudiants, chercheurs, comme pour tous lecteurs exigeants, curieux de physique fondamentale,
 de cosmologie et de sciences de l’information. </p>
-   </p>Si vous aimez Hawking, Rovelli ou Klein, et si vous
-préférez une <b>boussole</b> à un catéchisme, ce livre est pour vous.</p>
+   </p>Si vous aimez Hawking, Rovelli ou Klein, 
+  si vous préférez une <b>boussole</b> à un catéchisme, ce livre est pour vous.</p>
 
 <p><b>Ouvrez-le, admirez la charpente informationnelle du réel se dessiner sous vos yeux...</b>&nbsp;</p>
 
