--- a/index.html
+++ b/index.html
@@ -486,12 +486,12 @@
   </p>
  
   <p>Ni credo ni métaphore : une hypothèse testable, avec des signatures vérifiables. 
-    Rigueur sans brouillard, clarté sans simplisme.</p>
+    </p>Rigueur sans brouillard, clarté sans simplisme.</p>
 
-<p>Pour les Étudiants, chercheurs, comme pour tous lecteurs exigeants, curieux de physique fondamentale,
-de cosmologie et de sciences de l’information. </p>
+<p>Pour les Étudiants, chercheurs, comme pour tous lecteurs exigeants,
+  </p>curieux de physique fondamentale, de cosmologie et de sciences de l’information. </p>
    </p>Si vous aimez Hawking, Rovelli ou Klein, 
-  si vous préférez une <b>boussole</b> à un catéchisme, ce livre est pour vous.</p>
+  </p>si vous préférez une <b>boussole</b> à un catéchisme, ce livre est pour vous.</p>
 
 <p><b>Ouvrez-le, admirez la charpente informationnelle du réel se dessiner sous vos yeux...</b>&nbsp;</p>
 
