--- a/index.html
+++ b/index.html
@@ -485,15 +485,15 @@
     Découvrez la Théorie détaillée et les pistes expérimentales
   </p>
  
-  <p>Ni credo ni métaphore : une hypothèse testable, avec des signatures vérifiables. 
-    </p>Rigueur sans brouillard, clarté sans simplisme.</p>
+  <p>Ni credo ni métaphore : une hypothèse testable, avec des signatures vérifiables 
+    </p>Rigueur sans brouillard, clarté sans simplisme</p>
 
 <p>Pour les Étudiants, chercheurs, comme pour tous lecteurs exigeants,
   </p>curieux de physique fondamentale, de cosmologie et de sciences de l’information. </p>
    </p>Si vous aimez Hawking, Rovelli ou Klein, 
-  </p>si vous préférez une <b>boussole</b> à un catéchisme, ce livre est pour vous.</p>
+  </p>si vous préférez une boussole à un catéchisme, ce livre est pour vous.</p>
 
-<p><b>Ouvrez-le, admirez la charpente informationnelle du réel se dessiner sous vos yeux...</b>&nbsp;</p>
+<p><b>Ouvrez-le, et admirez la charpente informationnelle du réel se dessiner sous vos yeux...</b>&nbsp;</p>
 
   <div style="margin: 1.2rem 0 0;">
     <div style="display:flex; justify-content:center; align-items:center; gap:10px; flex-wrap:wrap; margin-top:10px;">
