--- a/index.html
+++ b/index.html
@@ -488,8 +488,7 @@
   <p>Ni credo ni métaphore : une hypothèse testable, avec des signatures vérifiables 
     </p>Rigueur sans brouillard, clarté sans simplisme</p>
 
-<p>Pour les Étudiants, chercheurs, comme pour tous lecteurs exigeants,
-  </p>curieux de physique fondamentale, de cosmologie et de sciences de l’information. </p>
+<p>Pour les Étudiants, chercheurs, comme pour tous lecteurs exigeants, curieux de physique fondamentale, de cosmologie et de sciences de l’information. </p>
    </p>Si vous aimez Hawking, Rovelli ou Klein, 
   </p>si vous préférez une boussole à un catéchisme, ce livre est pour vous.</p>
 
