--- a/index.html
+++ b/index.html
@@ -518,3 +518,4 @@
       <p><strong>Pour tout contact collaboratif relatif à la théorie :</strong></p>
       <p>ZM — <a href="mailto:zmtheorie@gmail.com" aria-label="Envoyer un e-mail à Théorie ZM">📧 zmtheorie@gmail.com</a></p>
       <p>HAL ID :hal-05186131</p>
+      <p>OSF : https://osf.io/n3kv9</p>
