--- a/index.html
+++ b/index.html
@@ -518,4 +518,5 @@
       <p><strong>Pour tout contact collaboratif relatif à la théorie :</strong></p>
       <p>ZM — <a href="mailto:zmtheorie@gmail.com" aria-label="Envoyer un e-mail à Théorie ZM">📧 zmtheorie@gmail.com</a></p>
       <p>HAL ID :hal-05186131</p>
-      <p>OSF : https://osf.io/n3kv9</p>
+      <p>[![DOI](https://img.shields.io/badge/DOI-10.17605%2FOSF.IO%2FN3KV9-blue.svg)](https://doi.org/10.17605/OSF.IO/N3KV9)
+</p>
