--- a/index.html
+++ b/index.html
@@ -518,5 +518,7 @@
       <p><strong>Pour tout contact collaboratif relatif à la théorie :</strong></p>
       <p>ZM — <a href="mailto:zmtheorie@gmail.com" aria-label="Envoyer un e-mail à Théorie ZM">📧 zmtheorie@gmail.com</a></p>
       <p>HAL ID :hal-05186131</p>
-      <p>[![DOI](https://img.shields.io/badge/DOI-10.17605%2FOSF.IO%2FN3KV9-blue.svg)](https://doi.org/10.17605/OSF.IO/N3KV9)
-</p>
+     <a href="https://doi.org/10.17605/OSF.IO/N3KV9" target="_blank" rel="noopener noreferrer">
+  <img src="https://img.shields.io/badge/DOI-10.17605%2FOSF.IO%2FN3KV9-blue.svg" alt="DOI badge" />
+</a>
+
